// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with dir 1`] = `
<DocumentFragment>
  .cache-2nzsas-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-2nzsas-StyledText e13y3mga0"
      dir="rtl"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with htmlFor 1`] = `
<DocumentFragment>
  .cache-1ku5ov3-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1ku5ov3-StyledText e13y3mga0"
      for="test"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with placement 1`] = `
<DocumentFragment>
  .cache-csp97-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: end;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-csp97-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-2nzsas-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-2nzsas-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-1ku5ov3-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1ku5ov3-StyledText e13y3mga0"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-n5sgp8-StyledText {
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-n5sgp8-StyledText e13y3mga0"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-1rc8nuc-StyledText {
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1rc8nuc-StyledText e13y3mga0"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-1ry8ffz-StyledText {
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1ry8ffz-StyledText e13y3mga0"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-1fjokpj-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1fjokpj-StyledText e13y3mga0"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-7s2z53-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-7s2z53-StyledText e13y3mga0"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-a4hls9-StyledText {
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-a4hls9-StyledText e13y3mga0"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-1j8a2me-StyledText {
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1j8a2me-StyledText e13y3mga0"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="code" 1`] = `
<DocumentFragment>
  .cache-imijze-StyledText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-imijze-StyledText e13y3mga0"
  >
    code
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-gm8eja-StyledText {
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gm8eja-StyledText e13y3mga0"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-if8msg-StyledText {
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-if8msg-StyledText e13y3mga0"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-1foondh-StyledText {
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1foondh-StyledText e13y3mga0"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with disabled 1`] = `
<DocumentFragment>
  .cache-1ku5ov3-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1ku5ov3-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with italic 1`] = `
<DocumentFragment>
  .cache-32bkwo-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    class="cache-32bkwo-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-1ku5ov3-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-gm8eja-StyledText {
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1ku5ov3-StyledText e13y3mga0"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-gm8eja-StyledText e13y3mga0"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-1yjvdcu-StyledText {
  color: #b3144d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1yjvdcu-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with underline 1`] = `
<DocumentFragment>
  .cache-17upp17-StyledText {
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="cache-17upp17-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
